@@ -8,7 +8,7 @@ autoconf
 libtool
 
 Linux:
-* a C compiler (tested with gcc-2.9x, gcc-3.1, gcc-3.2 and icc)
+* a C compiler (tested with gcc-2.9x, gcc-3.{0,1,2,3} and icc)
 * if you want ssl support, openssl-devel headers and libs
 * a lexical analyser generator (flex)
 
