@@ -1,6 +1,10 @@
 2004-02-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>
 	* backends: mysql backend started
 
+2004-02-27  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: infinite loop when waiting ident response when connect times out (linux)
+
 2004-02-24  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* bugfix: missing O_BINARY for permission file (visual)
